--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "inhabitant",
-  "version": "1.1.0",
+  "name": "wp_starter",
+  "version": "1.2",
   "description": "WordPress setup",
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.26.5",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^4.1.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "^4.0.2",
-    "gulp-prettyerror": "^1.2.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-terser": "^1.1.5"
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "bootstrap": "^4.5.3",
+    "browser-sync": "^2.26.13",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^6.0.0",
+    "gulp-prettyerror": "^2.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.4.1"
   },
   "prettier": {
     "singleQuote": true
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/robhyrk/wp-starter.git",
+  "author": "robhyrk <rob.hyrkiel@gmail.com>",
+  "license": "MIT"
 }
